<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_search"
          android:showAsAction="ifRoom"
          android:icon="@drawable/pokepraiser_search"
          android:title="@string/search">
    
       	<menu >
       	    <item android:id="@+id/search_pokemon"
     	       	  android:title="@string/all_pokemon" />

       	    <item android:id="@+id/search_attacks"
     	       	  android:title="@string/all_attacks" />
       	    
       	    <item android:id="@+id/search_abilities"
     	       	  android:title="@string/all_abilities" />

       	    <item android:id="@+id/advanced_pokesearch"
     	       	  android:title="@string/advanced_pokesearch" />
       	           	    
       	</menu>
        
    </item>
    
    <item android:id="@+id/action_compose"
		  android:showAsAction="ifRoom"        
          android:icon="@drawable/pokepraiser_teambuilder"
          android:title="@string/teambuilder" />
</menu>
