<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_team_add"
          android:icon="@drawable/team_add"
          android:showAsAction="always"
          android:title="@string/teambuilder" />    
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/pokepraiser_search"
          android:showAsAction="always"
          android:title="@string/search">
    
       	<menu >
       	    <item android:id="@+id/search_pokemon"
     	       	  android:title="@string/all_pokemon" />

       	    <item android:id="@+id/search_attacks"
     	       	  android:title="@string/all_attacks" />
       	    
       	    <item android:id="@+id/search_abilities"
     	       	  android:title="@string/all_abilities" />

       	    <item android:id="@+id/advanced_pokesearch"
     	       	  android:title="@string/advanced_pokesearch" />
       	           	    
       	</menu>
        
    </item>
    
    <item android:id="@+id/action_compose"
          android:icon="@drawable/pokepraiser_teambuilder"
          android:showAsAction="always"
          android:title="@string/teambuilder" >

       	<menu >
       	    <item android:id="@+id/manage_teams"
     	       	  android:title="@string/manage_teams" />
   	    </menu>        
        
    </item>
           	
</menu>
