<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
      	
    <LinearLayout 
        android:id="@+id/abilityScrollable"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    	
	    <TextView
	        android:id="@+id/abilityName"
			style="@style/abilityNameStyle" />
	
	    <TextView
	        android:id="@+id/battleEffectLabel"
	        android:text="@string/battle_effect_label"	        
			style="@style/abilityAttributeHeaderStyle" />	    
	    
	    <TextView
	        android:id="@+id/battleEffect"
	        style="@style/abilityAttributeBodyStyle"/>	 		

	    <TextView
	        android:id="@+id/worldEffectLabel"
	        android:text="@string/world_effect_label"
	        style="@style/abilityAttributeHeaderStyle"/>	    

	    <TextView
	        android:layout_marginBottom="10sp"
	        android:id="@+id/worldEffect"
	        style="@style/abilityAttributeBodyStyle" />

	   	<TextView
	   	    android:id="@+id/learningLabel"
			android:text="@string/learned_by"
			android:layout_marginBottom="10sp"
			style="@style/abilityAttributeHeaderStyle" 
			android:background="@color/exciting_red"/>		    
	    		    
	</LinearLayout>		    

</ScrollView>	    
	

