<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/attackScrollable"
       	android:layout_height="wrap_content"
       	android:layout_width="match_parent"
       	android:orientation="vertical">
       	
	    <TextView
	        android:id="@+id/attackName"
	        style="@style/abilityNameStyle"/>
	
	    <LinearLayout
	        android:id="@+id/powerLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp" >
	        
		    <TextView
		        android:id="@+id/basePowerLabel"
	        	android:text="@string/power"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"	        	
		        android:layout_weight="5"	        			        
		        style="@style/detailAttributeHeaderStyle" />
		    
			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    
		    <TextView
		        android:id="@+id/basePower"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="14sp" />		    	        
	        
        </LinearLayout>

	    <LinearLayout
	        android:id="@+id/accuracyLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
		    <TextView
		        android:id="@+id/baseAccuracyLabel"
	        	android:text="@string/accuracy"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"	        	
		        android:layout_weight="5"	        	        			        
				style="@style/detailAttributeHeaderStyle" />
		    
			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    
		    <TextView
		        android:id="@+id/baseAccuracy"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="14sp" />		    	        
	        
        </LinearLayout>	    

	    <LinearLayout
	        android:id="@+id/ppLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
		    <TextView
		        android:id="@+id/basePpLabel"
	        	android:text="@string/pp"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"	        	
		        android:layout_weight="5"	        	        			        
		        style="@style/detailAttributeHeaderStyle" />

			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    		    
		    <TextView
		        android:id="@+id/basePp"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="14sp" />		    	        
	        
        </LinearLayout>	    

	    <LinearLayout
	        android:id="@+id/effectPctLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
		    <TextView
		        android:id="@+id/effectPctLabel"
	        	android:text="@string/effect_percent"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"	        	
		        android:layout_weight="5"	        	
	        	style="@style/detailAttributeHeaderStyle" />

			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    		    
		    <TextView
		        android:id="@+id/effectPct"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="14sp" />		    	        
	        
        </LinearLayout>	    
	    	    	    
	    <TextView
	        android:id="@+id/battleDescLabel"
			android:layout_marginRight="30sp"        
	        android:background="@color/vibrant_green"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20sp"
	        android:padding="10sp"     
	        android:gravity="center"
	        android:text="@string/battle_desc_header"	        
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="22sp" />
	    	    
	    <TextView
	        android:id="@+id/battleDesc"
	        android:background="@color/light_gray"	        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"
	        android:layout_marginLeft="30sp"
   	        android:padding="10sp"
	        android:gravity="left|center_vertical"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="14sp" />	    	
	    
	    <TextView
	        android:id="@+id/secondaryDescLabel"
			android:layout_marginRight="30sp"
	        android:background="@color/vibrant_green"	        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20sp"
	        android:padding="10sp"	             
	        android:gravity="center"
	        android:text="@string/secondary_desc_header"	        
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="22sp" />
	
	    <TextView
	        android:id="@+id/secondaryDesc"
	        android:background="@color/light_gray"	        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"
	        android:layout_marginLeft="30sp"
	        android:padding="10sp"	   	        	        
	        android:gravity="left|center_vertical"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="14sp" />
	    
	   	<TextView
	   	    android:id="@+id/learningLabel"
			android:text="@string/learned_by"
			android:layout_marginBottom="10sp"
			style="@style/abilityAttributeHeaderStyle" 
			android:background="@color/exciting_red"/>	    	    	
	    		    
	</LinearLayout>
	
</ScrollView>
