<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/attackDetailLayout"
       	android:layout_height="wrap_content"
       	android:layout_width="fill_parent"
       	android:orientation="vertical">
       	
	    <TextView
	        android:id="@+id/attackName"
	        android:layout_marginLeft="10sp"
			android:layout_marginRight="10sp"
	        android:layout_marginTop="5sp"			
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="30sp" />
	
	    <LinearLayout
	        android:id="@+id/powerLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp" >
	        
		    <TextView
		        android:id="@+id/basePowerLabel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="right|center_vertical"
	        	android:text="@string/power"		        
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />
		    
			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    
		    <TextView
		        android:id="@+id/basePower"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />		    	        
	        
        </LinearLayout>

	    <LinearLayout
	        android:id="@+id/accuracyLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
		    <TextView
		        android:id="@+id/baseAccuracyLabel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="right|center_vertical"
	        	android:text="@string/accuracy"		        
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />
		    
			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    
		    <TextView
		        android:id="@+id/baseAccuracy"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />		    	        
	        
        </LinearLayout>	    

	    <LinearLayout
	        android:id="@+id/ppLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
		    <TextView
		        android:id="@+id/basePpLabel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="right|center_vertical"
	        	android:text="@string/pp"		        
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />

			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    		    
		    <TextView
		        android:id="@+id/basePp"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />		    	        
	        
        </LinearLayout>	    

	    <LinearLayout
	        android:id="@+id/effectPctLayoutRow"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
		    <TextView
		        android:id="@+id/effectPctLabel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="right|center_vertical"
	        	android:text="@string/effect_percent"		        
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />

			<View
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:visibility="invisible"/>		    
		    		    
		    <TextView
		        android:id="@+id/effectPct"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:gravity="left|center_vertical"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="25sp" />		    	        
	        
        </LinearLayout>	    
	    	    	    
	    <TextView
	        android:id="@+id/battleDescLabel"
	        android:layout_marginLeft="10sp"
			android:layout_marginRight="10sp"        
	        android:background="@drawable/detail_header"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"     
	        android:gravity="center"
	        android:text="@string/battle_desc_header"	        
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="20sp" />
	    	    
	    <TextView
	        android:id="@+id/battleDesc"
	        android:background="@drawable/detail_body"	        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="2sp"     
	        android:gravity="left|center_vertical"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="12sp" />	    	
	    
	    <TextView
	        android:id="@+id/secondaryDescLabel"
	        android:layout_marginLeft="10sp"
			android:layout_marginRight="10sp"                
	        android:background="@drawable/detail_header"	        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"     
	        android:gravity="center"
	        android:text="@string/secondary_desc_header"	        
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/secondaryDesc"
	        android:background="@drawable/detail_body"	        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="2sp"	        
	        android:gravity="left|center_vertical"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="12sp" />	    	
	    		    
	</LinearLayout>
	
</ScrollView>
