<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_marginTop="5sp"
	android:layout_marginBottom="5sp"        
	android:layout_marginLeft="5sp"
	android:layout_marginRight="5sp"
	android:padding="5sp"
	android:background="@color/white" >

	    <TextView
	        android:id="@+id/attackName"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
		    android:layout_weight="7"	        
	        android:gravity="center"
	        android:paddingRight="10sp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/clickable_text"	        
	        android:textSize="14sp" />            
	    	    
		<LinearLayout 
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:layout_weight="2"
		    android:gravity="center"
		    android:orientation="vertical" >

			<ImageView
			    android:id="@+id/attackType"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center" />			    
		    
			<View
		        android:layout_width="0dp"
		        android:layout_height="10dp"
		        android:visibility="invisible"/>
					    
			<ImageView
			    android:id="@+id/attackCategory"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center" />
		    		    
		</LinearLayout>
		
	    
		<LinearLayout
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="5"
		    android:gravity="center"
		    android:orientation="vertical">
		    
		    <LinearLayout 
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
				android:gravity="center" >		        

			    <TextView
			        android:id="@+id/basePowerLabel"
			        android:layout_width="0dip"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
					android:gravity="right|center_vertical"        
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textSize="12sp"
			        android:text="@string/power_short" />		        
		        		        
			    <TextView
			        android:id="@+id/basePower"
			        android:layout_width="0dip"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
					android:gravity="left|center_vertical"        
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textSize="12sp" />
			    
			</LinearLayout>		        

		    <LinearLayout 
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
				android:gravity="center" >		        

			    <TextView
			        android:id="@+id/baseAccuracyLabel"
			        android:layout_width="0dip"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
					android:gravity="right|center_vertical"        
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textSize="12sp"
			        android:text="@string/accuracy_short" />		        
		        			    					    		
			    <TextView
			        android:id="@+id/baseAccuracy"
			        android:layout_width="0dip"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
					android:gravity="left|center_vertical"        
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textSize="12sp" />
			    
		    </LinearLayout>
		        
		    <LinearLayout 
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
				android:gravity="center" >

			    <TextView
			        android:id="@+id/basePPLabel"
			        android:layout_width="0dip"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
					android:gravity="right|center_vertical"        
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textSize="12sp"
			        android:text="@string/pp_short" />		        
		        			    			
			    <TextView
			        android:id="@+id/basePP"
			        android:layout_width="0dip"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
					android:gravity="left|center_vertical"        
			        android:textAppearance="?android:attr/textAppearanceMedium"
			        android:textSize="12sp" />
			    
			</LinearLayout>			    

		</LinearLayout>
	    
</LinearLayout>
